...
    required this.onAction,
    required this.dividerColor,
  });
  static const all = <CheckInType, MoodPalette>{
    CheckInType.lowEnergy: MoodPalette(
      mode: CheckInType.lowEnergy,
      tr: 'Düşük Enerji',
      en: 'Low energy',
      icon: 'battery',
      brightness: Brightness.dark,
      background: Color(0xFF211625),
      surface: Color(0xFF39283F),
      textPrimary: Color(0xFFFFF1E7),
...
      mint: Color(0xFFFBD7B5),
      onAction: Color(0xFF211625),
      dividerColor: Color(0xFFB99FAF),
    ),
    CheckInType.bloated: MoodPalette(
      mode: CheckInType.bloated,
      tr: 'Şişkinlik',
      en: 'Bloating',
      icon: 'belly',
      brightness: Brightness.light,
      background: Color(0xFFEDF3E4),
      surface: Color(0xFFD2E4BC),
      textPrimary: Color(0xFF183C29),
...
